--- a/app/src/main/res/drawable/multitext_background.xml
+++ b/app/src/main/res/drawable/multitext_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#B1C4F2"/>
+            <solid android:color="#F1F6F3"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
