--- a/app/src/main/res/layout/activity_pengaduan.xml
+++ b/app/src/main/res/layout/activity_pengaduan.xml
@@ -27,7 +27,9 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentScrim="@color/white"
+            app:collapsedTitleTextColor="@color/white"
+            app:expandedTitleTextColor="@color/white"
+            app:contentScrim="@color/light_teal"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             app:title="Pengaduan">
 
@@ -38,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/logo"
+                android:src="@drawable/cover"
                 app:layout_collapseMode="parallax"
                 tools:ignore="ContentDescription" />
 
@@ -64,7 +66,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/light_blue">
+            android:background="@color/light_teal">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv1"
@@ -99,7 +101,7 @@
                         android:padding="10dp"
                         android:text=""
                         android:textColor="@color/white"
-                        android:textColorHint="#546E7A" />
+                        android:textColorHint="#37474F" />
 
                     <EditText
                         android:id="@+id/isi"
@@ -115,7 +117,7 @@
                         android:lines="5"
                         android:padding="10dp"
                         android:textColorHighlight="@color/white"
-                        android:textColorHint="#546E7A" />
+                        android:textColorHint="#37474F" />
 
                     <EditText
                         android:id="@+id/inputTanggal"
@@ -176,7 +178,7 @@
                         android:lines="3"
                         android:padding="10dp"
                         android:textColor="@color/white"
-                        android:textColorHint="#546E7A" />
+                        android:textColorHint="#37474F" />
 
                     <org.osmdroid.views.MapView
                         android:id="@+id/map"
