--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,78 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--first of all you have to change
-	the layout as CoordinatorLayout.
-	This is the first thing we need to do.-->
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_teal"
     tools:context=".MainActivity">
 
-    <!--AppBarLayout helps the toolbar and other components to react on
-        scroll changes. I am using Dark theme for AppBarLayout.
-        Inside this AppBarLayout i
-        have used CollapsingToolbarLayout. -->
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <!--    &lt;!&ndash;AppBarLayout helps the toolbar and other components to react on-->
+    <!--        scroll changes. I am using Dark theme for AppBarLayout.-->
+    <!--        Inside this AppBarLayout i-->
+    <!--        have used CollapsingToolbarLayout. &ndash;&gt;-->
+    <!--    <com.google.android.material.appbar.AppBarLayout-->
+    <!--        android:id="@+id/appBarLayout"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
-        <!-- In CollapsingToolbarLayout some important attributes are:
-        i) app:layout_scrollFlags which is used to specify how collapsing
-            layout behaves when content is scrolled.I have used
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            so it will scroll until it's is completely collapsed.
-        ii) app:contentScrim="@color/green" that specifies the color
-            of the collapsed toolbar -->
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:contentScrim="@color/white"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="@string/app_name">
+    <!--        &lt;!&ndash; In CollapsingToolbarLayout some important attributes are:-->
+    <!--        i) app:layout_scrollFlags which is used to specify how collapsing-->
+    <!--            layout behaves when content is scrolled.I have used-->
+    <!--            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"-->
+    <!--            so it will scroll until it's is completely collapsed.-->
+    <!--        ii) app:contentScrim="@color/green" that specifies the color-->
+    <!--            of the collapsed toolbar &ndash;&gt;-->
+    <!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:collapsedTitleTextColor="@color/white"-->
+    <!--            app:expandedTitleTextColor="@color/white"-->
+    <!--            app:contentScrim="@color/light_teal"-->
+    <!--            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"-->
+    <!--            app:title="Pengaduan">-->
 
-            <!--We are adding the image that we have added earlier
-                in the drawable folder.The attribute app:layout_collapseMode="parallax"
-                causes the image to move when user scrolls at a specific ratio. -->
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo"
-                app:layout_collapseMode="parallax" />
+    <!--            &lt;!&ndash;We are adding the image that we have added earlier-->
+    <!--                in the drawable folder.The attribute app:layout_collapseMode="parallax"-->
+    <!--                causes the image to move when user scrolls at a specific ratio. &ndash;&gt;-->
+    <!--            <ImageView-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="200dp"-->
+    <!--                android:scaleType="centerCrop"-->
+    <!--                android:src="@drawable/cover"-->
+    <!--                app:layout_collapseMode="parallax"-->
+    <!--                tools:ignore="ContentDescription" />-->
 
-            <!-- The attribute app:layout_collapseMode="pin" is set so that
-                sticks to the top when the user scrolls the view up-->
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
+    <!--            &lt;!&ndash; The attribute app:layout_collapseMode="pin" is set so that-->
+    <!--                sticks to the top when the user scrolls the view up&ndash;&gt;-->
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    <!--            <androidx.appcompat.widget.Toolbar-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="?attr/actionBarSize"-->
+    <!--                app:layout_collapseMode="pin"-->
+    <!--                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />-->
 
-    </com.google.android.material.appbar.AppBarLayout>
+    <!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
 
-    <!--Now add the NestedScollView-->
+    <!--    </com.google.android.material.appbar.AppBarLayout>-->
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/dark_blue"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <!--In textview we will be adding the text that i have
-            added earlier in strings.xml file.This is simply the
-            the content to be scrolled -->
-        <TextView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lineSpacingExtra="8sp"
-            android:padding="16dp"
-            android:text="@string/content"
-            android:textSize="20sp" />
+            android:layout_height="match_parent"
+            android:background="@color/light_teal">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@color/white"
+                android:elevation="10dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:orientation="vertical"
+                    android:padding="20dp">
+
+                    <EditText
+                        android:id="@+id/judul"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_marginBottom="24dp"
+                        android:autofillHints=""
+                        android:background="@drawable/multitext_background"
+                        android:ems="10"
+                        android:hint="@string/judul_pengaduan"
+                        android:inputType="text"
+                        android:padding="10dp"
+                        android:text=""
+                        android:textColor="@color/white"
+                        android:textColorHint="#37474F" />
+
+                    <EditText
+                        android:id="@+id/isi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="24dp"
+                        android:autofillHints=""
+                        android:background="@drawable/multitext_background"
+                        android:ems="10"
+                        android:gravity="start|top"
+                        android:hint="@string/isi_pengaduan"
+                        android:inputType="textMultiLine"
+                        android:lines="5"
+                        android:padding="10dp"
+                        android:textColorHighlight="@color/white"
+                        android:textColorHint="#37474F" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <EditText
+                android:id="@+id/token"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="56dp"
+                android:layout_marginEnd="32dp"
+                android:background="@drawable/bg_edit_white"
+                android:ems="10"
+                android:hint="MASUKKAN TOKEN ANDA"
+                android:inputType="text"
+                android:textAlignment="center"
+                android:textColor="@color/medium_teal"
+                android:textColorHint="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cv1" />
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/lapor"
+                style="@android:style/Widget.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:background="@drawable/button_background"
+                android:text="@string/lapor"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.466"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/token"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/lapor"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                style="?android:attr/buttonBarButtonStyle">
+
+                <Button
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="PENGADUAN"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <Button
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="STATISTIKA"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <Button
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="TENTANG"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
