--- a/app/src/main/res/layout/activity_pengaduan.xml
+++ b/app/src/main/res/layout/activity_pengaduan.xml
@@ -7,55 +7,55 @@
     android:background="@color/light_blue"
     tools:context=".PengaduanActivity">
 
-    <!--AppBarLayout helps the toolbar and other components to react on
-        scroll changes. I am using Dark theme for AppBarLayout.
-        Inside this AppBarLayout i
-        have used CollapsingToolbarLayout. -->
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+<!--    &lt;!&ndash;AppBarLayout helps the toolbar and other components to react on-->
+<!--        scroll changes. I am using Dark theme for AppBarLayout.-->
+<!--        Inside this AppBarLayout i-->
+<!--        have used CollapsingToolbarLayout. &ndash;&gt;-->
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/appBarLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
-        <!-- In CollapsingToolbarLayout some important attributes are:
-        i) app:layout_scrollFlags which is used to specify how collapsing
-            layout behaves when content is scrolled.I have used
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            so it will scroll until it's is completely collapsed.
-        ii) app:contentScrim="@color/green" that specifies the color
-            of the collapsed toolbar -->
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:collapsedTitleTextColor="@color/white"
-            app:expandedTitleTextColor="@color/white"
-            app:contentScrim="@color/light_teal"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="Pengaduan">
+<!--        &lt;!&ndash; In CollapsingToolbarLayout some important attributes are:-->
+<!--        i) app:layout_scrollFlags which is used to specify how collapsing-->
+<!--            layout behaves when content is scrolled.I have used-->
+<!--            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"-->
+<!--            so it will scroll until it's is completely collapsed.-->
+<!--        ii) app:contentScrim="@color/green" that specifies the color-->
+<!--            of the collapsed toolbar &ndash;&gt;-->
+<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:collapsedTitleTextColor="@color/white"-->
+<!--            app:expandedTitleTextColor="@color/white"-->
+<!--            app:contentScrim="@color/light_teal"-->
+<!--            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"-->
+<!--            app:title="Pengaduan">-->
 
-            <!--We are adding the image that we have added earlier
-                in the drawable folder.The attribute app:layout_collapseMode="parallax"
-                causes the image to move when user scrolls at a specific ratio. -->
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/cover"
-                app:layout_collapseMode="parallax"
-                tools:ignore="ContentDescription" />
+<!--            &lt;!&ndash;We are adding the image that we have added earlier-->
+<!--                in the drawable folder.The attribute app:layout_collapseMode="parallax"-->
+<!--                causes the image to move when user scrolls at a specific ratio. &ndash;&gt;-->
+<!--            <ImageView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:scaleType="centerCrop"-->
+<!--                android:src="@drawable/cover"-->
+<!--                app:layout_collapseMode="parallax"-->
+<!--                tools:ignore="ContentDescription" />-->
 
-            <!-- The attribute app:layout_collapseMode="pin" is set so that
-                sticks to the top when the user scrolls the view up-->
+<!--            &lt;!&ndash; The attribute app:layout_collapseMode="pin" is set so that-->
+<!--                sticks to the top when the user scrolls the view up&ndash;&gt;-->
 
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
+<!--            <androidx.appcompat.widget.Toolbar-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="?attr/actionBarSize"-->
+<!--                app:layout_collapseMode="pin"-->
+<!--                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />-->
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
 
-    </com.google.android.material.appbar.AppBarLayout>
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -136,33 +136,43 @@
                         android:textColorHint="#1B5E20"
                         android:textSize="16sp" />
 
+                    <EditText
+                        android:id="@+id/nama_pelapor"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_marginBottom="24dp"
+                        android:autofillHints=""
+                        android:background="@drawable/multitext_background"
+                        android:ems="10"
+                        android:hint="@string/nama_pelapor"
+                        android:inputType="text"
+                        android:padding="10dp"
+                        android:text=""
+                        android:textColor="@color/white"
+                        android:textColorHint="#37474F" />
+
+                    <EditText
+                        android:id="@+id/hp_pelapor"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_marginBottom="24dp"
+                        android:autofillHints=""
+                        android:background="@drawable/multitext_background"
+                        android:ems="10"
+                        android:hint="@string/hp_pelapor"
+                        android:inputType="text"
+                        android:padding="10dp"
+                        android:text=""
+                        android:textColor="@color/white"
+                        android:textColorHint="#37474F" />
+
                     <Spinner
                         android:id="@+id/kategori"
                         android:layout_width="match_parent"
                         android:layout_height="52dp"
+                        android:layout_marginBottom="24dp"
                         android:background="@drawable/multitext_background"
                         android:padding="10dp" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:elevation="20dp"
-                app:cardCornerRadius="0dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cv1">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="20dp">
 
                     <EditText
                         android:id="@+id/lokasi"
@@ -183,32 +193,33 @@
                     <org.osmdroid.views.MapView
                         android:id="@+id/map"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp" />
+                        android:layout_height="300dp"
+                        android:visibility="gone"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="24dp">
+                        android:layout_height="match_parent">
 
                         <ImageView
                             android:id="@+id/img"
                             android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:background="#c1c1c1"
+                            android:layout_height="300dp"
+                            android:background="@color/light_teal"
                             android:contentDescription="@string/gambar"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageButton
                             android:id="@+id/uploadImg"
-                            android:layout_width="wrap_content"
-                            android:layout_height="50dp"
-                            android:layout_marginEnd="5dp"
-                            android:layout_marginBottom="5dp"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginBottom="16dp"
+                            android:background="@drawable/button_background"
                             android:contentDescription="@string/tombol_gambar"
                             app:layout_constraintBottom_toBottomOf="@+id/img"
                             app:layout_constraintEnd_toEndOf="@+id/img"
-                            app:srcCompat="@drawable/ic_camera" />
+                            app:srcCompat="@drawable/ic_camera_white" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -229,7 +240,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cv2" />
+                app:layout_constraintTop_toBottomOf="@id/cv1" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
