--- a/app/src/main/res/drawable/bg_view.xml
+++ b/app/src/main/res/drawable/bg_view.xml
@@ -2,9 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
+            <solid android:color="@color/light_teal"/>
             <corners
-                android:radius="10dp"
+                android:topLeftRadius="50dp"
+                android:topRightRadius="50dp"
                 />
         </shape>
     </item>
