--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -17,18 +17,29 @@
         app:titleTextColor="@color/white"/>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:cardCornerRadius="30dp"
         android:layout_below="@id/toolbarStatus"
         android:layout_margin="24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
 
         <LinearLayout
+            android:layout_marginTop="200dp"
             android:padding="20dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+
 
             <TextView
                 android:text="Judul Pengaduan"
@@ -39,8 +50,10 @@
                 android:layout_height="32dp"/>
 
             <TextView
+                android:id="@+id/judul"
                 android:text="Judul Pengaduan"
                 android:textSize="20sp"
+                android:textColor="@color/black"
                 android:layout_width="match_parent"
                 android:layout_height="48dp" />
 
@@ -53,8 +66,10 @@
                 android:layout_height="32dp"/>
 
             <TextView
+                android:id="@+id/lokasi"
                 android:text="Lokasi"
                 android:textSize="20sp"
+                android:textColor="@color/black"
                 android:layout_width="match_parent"
                 android:layout_height="48dp" />
 
@@ -67,14 +82,27 @@
                 android:layout_height="32dp"/>
 
             <TextView
+                android:id="@+id/status"
                 android:text="Status"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:textSize="20sp"
-                android:layout_width="match_parent"
-                android:layout_height="48dp" />
+                android:textColor="@color/white"
+                android:background="#900C3F"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cv"/>
 
 </RelativeLayout>
